--- a/app/.env
+++ b/app/.env
@@ -2,8 +2,8 @@ POSTGRES_USER=xiphi_admin
 POSTGRES_PASSWORD=pgAdmin%40123
 POSTGRES_HOST=pg-xiphi-dev-01.postgres.database.azure.com
 POSTGRES_PORT=5432
-POSTGRES_DB=datamodel
+POSTGRES_DB=DataModel
 
-NEO4J_URI=bolt://localhost:7687
+NEO4J_URI= bolt://localhost:7687
 NEO4J_USER=neo4j
-NEO4J_PASSWORD=87654321
+NEO4J_PASSWORD=12345678
