--- a/app/.env
+++ b/app/.env
@@ -4,6 +4,6 @@ POSTGRES_HOST=pg-xiphi-dev-01.postgres.database.azure.com
 POSTGRES_PORT=5432
 POSTGRES_DB=DataModel
 
-NEO4J_URI= bolt://localhost:7687
+NEO4J_URI= neo4j:// 20.42.92.97:7687
 NEO4J_USER=neo4j
-NEO4J_PASSWORD=12345678
+NEO4J_PASSWORD=vA6TEyAUf82J2Wi
